add function, with alerts for empty fields, branching for most possible options of form inputs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1 class="title">Track Suggester</h1>
       <p>Complete the following questionnaire to see what programming language track we suggest!</p>
-      <div is="php">
+      <div id="php">
         <h1><span class="name"></span>, you should think more about attending the PHP/Drupal track at Epicodus!</h1>
       </div>
       <div id="ruby">
